--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "cruitme-landing",
+  "name": "application-name",
   "version": "0.0.1",
-  "dependencies": {
-    "express": "3.1.x"
+  "private": true,
+  "scripts": {
+    "start": "node app.js"
   },
-  "engines": {
-    "node": "0.10.x",
-    "npm": "1.2.x"
+  "dependencies": {
+    "express": "3.1.2",
+    "jshtml": "*"
   }
 }
